# pinterface

./: README.md  setup.cfg
pinterface/: __init__.py  gpio.py
pinterface/demo/: simple.py
pinterface/examples/: __init__.py  rotary_encoder.py
pinterface/input/: rotary_encoder.py
