[metadata]
name = pinterface
version = attr: pinterface.__version__
description = A raspberry pi physical interface toolkit

[options]
packages = find:

install_requires =
    adafruit-circuitpython-rgb-display
    gpiozero
    adafruit-blinka
    tenacity

[options.packages.find]
include =
    pinterface
